--- a/APP/Client/hospital-appointment/package.json
+++ b/APP/Client/hospital-appointment/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "overrides": {
-    "postcss": "7.0.39"
+    "postcss": "8.4.31",
+    "postcss-safe-parser>postcss": "8.4.31"
   }
 }
