--- a/APP/Client/hospital-appointment/package.json
+++ b/APP/Client/hospital-appointment/package.json
@@ -49,6 +49,8 @@
   },
   "overrides": {
     "postcss": "8.4.31",
-    "postcss-safe-parser>postcss": "8.4.31"
+    "postcss-safe-parser": {
+      "postcss": "8.4.31"
+    }
   }
 }
